Closed
Bug 21297
Opened 26 years ago
Closed 26 years ago
[FEATURE]Modal window layering can get screwed on resume
Categories
(Core :: XUL, defect, P3)
Tracking
()
VERIFIED
FIXED
M14
People
(Reporter: sfraser_bugs, Assigned: danm.moz)
References
Details
(Whiteboard: [PDT+] related to 15574 2/15)
Attachments
(1 file)
|
441 bytes,
text/html
|
Details |
When you resume Mozilla on the Mac (i.e. bring the app to the foreground), and
you have a moveable modal dialog up (e.g. the preferences), the window layering
can get messed up. To reproduce
1. Have a browser window open
2. Open the prefs dialog
3. Click on the desktop to put Mozilla in the background
4. Resume Mozilla by clicking in the *browser* window
Note that now the browser window is foremost, obscuring the prefs dialog, but the
browser window and its menu bar do not respond to clicks.
Summary: Modal window layering can get screwed on resume → [FEATURE]Modal window layering can get screwed on resume
Comment 3•26 years ago
|
||
Jimmy Lee notes a variation of this bug which I'd like to add (Mac OS), and which
should be checked upon verification. (I'm QA Assigning this to myself so that
nobody gets bogged this. ;)
* http://jimbob/bugs/confirm_it.html (attached to bug)
* Click Confirm... button
* Click on Desktop
* Click on Browser window
---> the browser window, rather than the modal dialog, becomes frontmost. You
can't move the browser window out of the way to access the modal dialog.
QA Contact: claudius → elig
Putting on PDT+ radar for beta1.
Whiteboard: [pdt "feature"] related to 15574 → [PDT+][pdt "feature"] related to 15574
Whiteboard: [PDT+][pdt "feature"] related to 15574 → [PDT+][pdt "feature"] related to 15574 2/15
My understanding goes something like this: on linux and windows, we're relying on
the OS to provide this behaviour. On the mac, we have to hand-tool it. Windows is
currently well-behaved. I've just checked in a fix for the Mac. Linux was well-
behaved and would still be if not for bug 19255. So keeping in mind that linux
won't work but will when 19255 is fixed, I'm calling this a wrap.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+][pdt "feature"] related to 15574 2/15 → [PDT+] related to 15574 2/15
Comment 8•26 years ago
|
||
Verified fixed on 2.14.00 Mac OS build. Also checked Win32 & Linux commercial
builds to ensure a warm feeling of QA chewing satisfaction.
(Broke out a side issue into 27772.)
Status: RESOLVED → VERIFIED
Comment 9•26 years ago
|
||
[and, yes, checked both Jimmy's test case and sfraser's test case.]
You need to log in
before you can comment on or make changes to this bug.
Description
•