force application resume event into modal window. bug 21297. r:saari